// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowedAnimesUpdates renders default 1`] = `
.c0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c16 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c6 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c6.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c6:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c10 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  z-index: 10;
}

.c1 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c17 {
  font-weight: 700;
  color: white;
  font-size: 1rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c18 {
  font-weight: 300;
  color: white;
  font-size: 0.9rem;
  text-shadow: 0 0 2px black,0 0 4px black;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c7 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c7:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c19 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0.7 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c19:hover {
  opacity: 1 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c2 {
  overflow-x: hidden;
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.c15 {
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient( to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 90% );
  -webkit-backface-visibility: initial;
}

.c12 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: linear-gradient( to top, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 40% );
  padding: 16px;
}

.c12 .c13 {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c12:hover .c13 {
  opacity: 1;
}

.c11 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c6:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c10 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c10 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c10 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0"
      size="32"
    />
    <h2
      class="c1"
      style="margin-left: 72px; margin-bottom: 8px;"
    >
      Animes que sigues
    </h2>
    <div
      class="c2"
      style="width: 100vw;"
    >
      <div
        class="c3 c4"
        style="left: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c6 c7"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
            />
          </svg>
        </button>
      </div>
      <div
        class="c9"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 0"
              class="c11"
              src="Here goes the anime image url 0"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 1"
              class="c11"
              src="Here goes the anime image url 1"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 1"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 1
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 2"
              class="c11"
              src="Here goes the anime image url 2"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
        style="right: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c6 c19"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
            />
          </svg>
          <span
            class="c16 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when all animes are loading 1`] = `
.c0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c12 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c6 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c6.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c6:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c10 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  z-index: 10;
}

.c1 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c7 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c7:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c11 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0.7 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c11:hover {
  opacity: 1 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c2 {
  overflow-x: hidden;
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c6:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c10 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c10 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c10 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0"
      size="32"
    />
    <h2
      class="c1"
      style="margin-left: 72px; margin-bottom: 8px;"
    >
      Animes que sigues
    </h2>
    <div
      class="c2"
      style="width: 100vw;"
    >
      <div
        class="c3 c4"
        style="left: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c6 c7"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
            />
          </svg>
        </button>
      </div>
      <div
        class="c9"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            style="cursor: default; opacity: 1;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            style="cursor: default; opacity: 0.8;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 3000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            style="cursor: default; opacity: 0.6;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
        style="right: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c6 c11"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
            />
          </svg>
          <span
            class="c12 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when loading 1`] = `
.c0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c16 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c6 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c6.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c6:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c10 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  z-index: 10;
}

.c1 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c17 {
  font-weight: 700;
  color: white;
  font-size: 1rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c18 {
  font-weight: 300;
  color: white;
  font-size: 0.9rem;
  text-shadow: 0 0 2px black,0 0 4px black;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c7 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c7:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c19 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0.7 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c19:hover {
  opacity: 1 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c2 {
  overflow-x: hidden;
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.c15 {
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient( to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 90% );
  -webkit-backface-visibility: initial;
}

.c12 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: linear-gradient( to top, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 40% );
  padding: 16px;
}

.c12 .c13 {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c12:hover .c13 {
  opacity: 1;
}

.c11 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c6:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c10 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c10 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c10 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0"
      size="32"
    />
    <h2
      class="c1"
      style="margin-left: 72px; margin-bottom: 8px;"
    >
      Animes que sigues
    </h2>
    <div
      class="c2"
      style="width: 100vw;"
    >
      <div
        class="c3 c4"
        style="left: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c6 c7"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
            />
          </svg>
        </button>
      </div>
      <div
        class="c9"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 0"
              class="c11"
              src="Here goes the anime image url 0"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 1"
              class="c11"
              src="Here goes the anime image url 1"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 1"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 1
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 2"
              class="c11"
              src="Here goes the anime image url 2"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
        style="right: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c6 c19"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
            />
          </svg>
          <span
            class="c16 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`FollowedAnimesUpdates renders when some animes are loading 1`] = `
.c0 {
  min-height: 32px;
  max-height: 32px;
  height: 32px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c16 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c6 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c6.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c6:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c10 {
  position: relative;
  border-radius: 4px;
  overflow: hidden;
  --width: calc( ( 100vw - 3 * 16px - 2 * 72px ) / 4 );
  --height: calc(var(--width) * 0.64);
  width: var(--width);
  height: var(--height);
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  z-index: 10;
}

.c1 {
  font-weight: 700;
  color: #e7e7e7;
  font-size: 1.2rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
}

.c17 {
  font-weight: 700;
  color: white;
  font-size: 1rem;
  line-height: 1;
  text-shadow: 0 0 2px black,0 0 6px black;
  margin-bottom: 4px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c18 {
  font-weight: 300;
  color: white;
  font-size: 0.9rem;
  text-shadow: 0 0 2px black,0 0 4px black;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.c7 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c7:hover {
  opacity: 0 !important;
  background-image: linear-gradient( to left, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c19 {
  height: 100%;
  border-radius: 0;
  background-color: transparent !important;
  opacity: 0.7 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.4) );
  font-size: 3.5rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  padding: 0 24px;
}

.c19:hover {
  opacity: 1 !important;
  background-image: linear-gradient( to right, rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0.8) );
}

.c2 {
  overflow-x: hidden;
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  gap: 16px;
}

.c15 {
  -webkit-filter: drop-shadow(0px 0px 1px #000000aa);
  filter: drop-shadow(0px 0px 1px #000000aa);
  font-size: 24px;
}

.c14 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 8px;
  background-image: linear-gradient( to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 90% );
  -webkit-backface-visibility: initial;
}

.c12 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: linear-gradient( to top, rgba(0,0,0,0.7), rgba(0,0,0,0.5) 20%, rgba(0,0,0,0) 40% );
  padding: 16px;
}

.c12 .c13 {
  opacity: 0;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c12:hover .c13 {
  opacity: 1;
}

.c11 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c6:hover {
    background-color: transparent;
  }
}

@media (max-width:1000px) {
  .c10 {
    --width: calc( ( 100vw - 2 * 16px - 2 * 72px ) / 3 );
    --height: calc(var(--width) * 0.64);
  }
}

@media (max-width:800px) {
  .c10 {
    --width: calc( ( 100vw - 1 * 16px - 2 * 72px ) / 2 );
    --height: calc(var(--width) * 0.64);
    --height: calc(var(--width) * 0.84);
  }
}

@media (max-width:500px) {
  .c10 {
    --width: calc( ( 100vw - 0 * 16px - 2 * 72px ) / 1 );
    --height: calc(var(--width) * 0.64);
  }
}

<body>
  <div>
    <div
      class="c0"
      size="32"
    />
    <h2
      class="c1"
      style="margin-left: 72px; margin-bottom: 8px;"
    >
      Animes que sigues
    </h2>
    <div
      class="c2"
      style="width: 100vw;"
    >
      <div
        class="c3 c4"
        style="left: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled c6 c7"
          data-testid="navigation-button-button"
          direction="left"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowLeftRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14.71 15.88 10.83 12l3.88-3.88c.39-.39.39-1.02 0-1.41a.9959.9959 0 0 0-1.41 0L8.71 11.3c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0 .38-.39.39-1.03 0-1.42z"
            />
          </svg>
        </button>
      </div>
      <div
        class="c9"
        style="transition: all 400ms; transform: translate3d(72px, 0, 0); pointer-events: all;"
      >
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 0"
              class="c11"
              src="Here goes the anime image url 0"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 0"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 0
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
        <div
          style="opacity: 1; webkit-transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            style="cursor: default; opacity: 0.8;"
          >
            <div
              animation="pulse"
              variant="rectangular"
            >
              Skeleton:Mock
            </div>
          </div>
        </div>
        <div
          data-testid="anime-entry-wrapper"
          style="opacity: 1; webkit-transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="c10"
            data-testid="anime-entry-background"
          >
            <img
              alt="Here goes the anime name 2"
              class="c11"
              src="Here goes the anime image url 2"
            />
            <div
              class="c12"
              data-testid="anime-episode-entry-anime-info"
            >
              <div
                class="c13 c14"
              >
                <button
                  aria-label="Seguir"
                  class="c5 MuiButtonBase-root c15"
                  data-mui-internal-clone-element="true"
                  data-testid="manage-follow-button-button"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
                    data-testid="FavoriteBorderRoundedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.66 3.99c-2.64-1.8-5.9-.96-7.66 1.1-1.76-2.06-5.02-2.91-7.66-1.1-1.4.96-2.28 2.58-2.34 4.29-.14 3.88 3.3 6.99 8.55 11.76l.1.09c.76.69 1.93.69 2.69-.01l.11-.1c5.25-4.76 8.68-7.87 8.55-11.75-.06-1.7-.94-3.32-2.34-4.28zM12.1 18.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
                    />
                  </svg>
                  <span
                    class="c16 MuiTouchRipple-root"
                  />
                </button>
              </div>
              <h3
                aria-label="Here goes the anime name 2"
                class="c17"
                data-mui-internal-clone-element="true"
              >
                Here goes the anime name 2
              </h3>
              <h6
                class="c18"
              >
                Episodio 5
              </h6>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3 c4"
        style="right: 0px; width: 72px;"
      >
        <button
          class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c6 c19"
          data-testid="navigation-button-button"
          direction="right"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c8 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="KeyboardArrowRightRoundedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.29 15.88 13.17 12 9.29 8.12a.9959.9959 0 0 1 0-1.41c.39-.39 1.02-.39 1.41 0l4.59 4.59c.39.39.39 1.02 0 1.41L10.7 17.3c-.39.39-1.02.39-1.41 0-.38-.39-.39-1.03 0-1.42z"
            />
          </svg>
          <span
            class="c16 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
